<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Github</string>
    <string name="tab_text_1">"Followers"</string>
    <string name="tab_text_2">"Following"</string>
    <string name="tab_text_3">"Repository"</string>
    <string name="content_tab_home">""</string>
    <string name="content_tab_profile">Change your Profile here</string>
    <string name="content_tab_text">This is Tab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="make_image_profile">make_image_profile</string>
    <string name="name">name</string>
    <string name="menu2">menu2</string>
    <string name="search">search</string>
    <string name="search_hint">Masukan nama</string>
    <string name="lihat">Lihat</string>
    <string name="cari_nama">Cari nama</string>
    <string name="profile">profile</string>
    <string name="jumlah">Jumlah</string>
    <string name="menu">Menu</string>
    <string name="about">About</string>
    <string name="ubah_bahasa">Ubah Bahasa</string>
    <string name="isiAbout">Aplikasi ini merupakan karya Aneke Karina,dengan memanfaatkan api github</string>
    <string name="welcome">Welcome to GitHub</string>
    <string name="favorite">favorite</string>
    <string name="user_favorit">Favorit</string>
    <string name="atur_pengingat">Atur pengingat</string>
    <string name="company">company</string>
    <string name="location">location</string>
    <string name="setel_pengingat">Setel Pengingat</string>
    <string name="settings">Pengaturan</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="atur_alarm">Atur alarm</string>
</resources>